# link-shorter

./: .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
link-shorter-frontend/: Dockerfile  index.html  package-lock.json  package.json
link-shorter-frontend/src/: App.jsx  api.js  index.css
link-shorter-frontend/src/components/: OtpInput.jsx
link-shorter-frontend/src/pages/: AuthPage.jsx  DeleteAccountPage.jsx  GoogleCallbackPage.jsx  LogoutPage.jsx  MainPage.jsx  PasswordResetConfirmPage.jsx  PasswordResetRequestPage.jsx  RedirectPage.jsx  VerificationPage.jsx
src/: main.py
src/api/: __init__.py  auth_router.py  link_router.py
src/cache/: __init__.py  cache_service.py
src/core/: config.py
src/db/: __init__.py  session.py
src/dependencies/: __init__.py  auth_dependencies.py  link_dependencies.py
src/email/: __init__.py  email_backend.py  email_config.py
src/exceptions/: auth_exception_handlers.py  auth_exceptions.py  link_exception_handlers.py  link_exceptions.py
src/models/: __init__.py  base_models.py  link_models.py  user_models.py
src/repositories/: __init__.py  base_repository.py  link_repository.py  short_link_repository.py  user_repository.py
src/schemas/: __init__.py  link_schemas.py  user_schemas.py
src/security/: __init__.py  token_manager.py  types.py
src/services/: __init__.py  auth_service.py  link_service.py
src/utils/: __init__.py  auth_utils.py  link_utils.py
tests/: conftest.py  test_auth.py  test_links.py
