[project]
name = "link-shorter"
version = "6.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "fastapi-mail>=1.6.4",
    "greenlet>=3.5.1",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-multipart>=0.0.29",
    "redis>=8.0.0",
    "resend[async]>=2.30.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_mode = "auto"
